--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 		<script src="js/jquery.poptrox.min.js"></script>
 		<script src="js/skel.min.js"></script>
 		<script src="js/init.js"></script>
-		<link href="bootstrap.css" rel="stylesheet" type="text/css">
+		<link href="CoryHanna.github.io/bootstrap.css" rel="stylesheet" type="text/css">
 	<noscript>
 			<link rel="stylesheet" href="css/skel-noscript.css" />
 			<link rel="stylesheet" href="css/style.css" />
