--- a/portfolio.html
+++ b/portfolio.html
@@ -8,7 +8,7 @@
     <meta name="author" content="">
     <link rel="shortcut icon" href="assets/ico/favicon.png">
 
-    <title>LINK - Agency Theme</title>
+    <title>Cory Hanna Design</title>
 
     <!-- Bootstrap core CSS -->
     <link href="assets/css/bootstrap.css" rel="stylesheet">
@@ -36,7 +36,7 @@
 	<!-- Menu -->
 	<nav class="menu" id="theMenu">
 		<div class="menu-wrap">
-			<h1 class="logo"><a href="index.html#home">LINK</a></h1>
+			<h1 class="logo"><a href="index.html#home">Cory Hanna Design</a></h1>
 			<i class="fa fa-arrow-right menu-close"></i>
 			<a href="index.html">Home</a>
 			<a href="services.html">Services</a>
