--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-lg-8 col-lg-offset-2">
-					<h1>Cory Hanna Design</h1>
-					<h2>|||||||||||||||||</h2>
+					<h1>Cory Hanna Design</h1><hr><hr>
+					<!--<h2>__________________</h2>--><br>
 					<div class="spacer"></div>
 					<i class="fa fa-angle-down"></i>
 				</div>
@@ -71,11 +71,11 @@
     <div class="container">
       <div class="row mt">
       	<div class="col-lg-8">
-	        <h1>We build websites & apps that people love!</h1>
+	        <h1>I build websites & apps that people love!</h1>
 	        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</p>
       	</div>
       	<div class="col-lg-4">
-      		<p class="pull-right"><br><button type="button" class="btn btn-green">Start Your Project Now</button></p>
+      		<p class="pull-right"><br><button type="button" class="btn btn-green">Need A WebSite?</button></p>
       	</div>
       </div><!-- /row -->
     </div><!-- /.container -->
