--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
             <div class="row">
                 <div class="col-lg-12">
                     <img class="img-responsive" src="img/profile.png" alt="">
-                    <div class="intro-text">
+                    <div class="intro-text animated_bg2">
                         <span class="name">Cory Hanna Design</span>
                         <hr class="star-light">
                         <span class="skills">Web Developer - Graphic Artist - User Experience Designer</span>
@@ -535,6 +535,25 @@
     <!-- Custom Theme JavaScript -->
     <script src="js/freelancer.js"></script>
 
+
+
+  <!-- Animated Background JS-->
+<script src="js/animated_bg.js"></script>
+<script>
+	jQuery(document).ready(function(){
+
+		$('.animated_bg2').animatedBG({
+			colorSet: ['#abebfe', '#aad667', '#57e6ee', '#ff7ebb'],
+			speed: 2000
+		});
+
+		$('.animated_bg3').animatedBG({
+			colorSet: ['#71a98b', '#b15c8e', '#dc6b68', '#6c5a94', '#b14c4e', '#736357'],
+			speed: 6000
+		});
+
+	});
+</script>
 </body>
 
 </html>
