--- a/index.html
+++ b/index.html
@@ -538,6 +538,8 @@
 
 
   <!-- Animated Background JS-->
+<script src="js/jquery-1.11.0.min.js"></script>
+<script src="js/jquery-ui.min.js"></script> 
 <script src="js/animated_bg.js"></script>
 <script>
 	jQuery(document).ready(function(){
