--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="animated_bg">
 
 <head>
 
@@ -541,6 +541,10 @@
 <script src="js/jquery-1.11.0.min.js"></script>
 <script src="js/jquery-ui.min.js"></script> 
 <script src="js/animated_bg.js"></script>
+<!--<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.11.1/jquery.js"></script>
+<script src="js/jquery-ui.min.js"></script> 
+<script src="js/animated_bg.js"></script>
+-->
 <script>
 	jQuery(document).ready(function(){
 
