--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 <body id="page-top" class="index">
 
     <!-- Navigation -->
-    <nav class="navbar navbar-default navbar-fixed-top animated_bg">
+    <nav class="navbar navbar-default navbar-fixed-top">
         <div class="container">
             <!-- Brand and toggle get grouped for better mobile display -->
             <div class="navbar-header page-scroll">
@@ -70,7 +70,7 @@
     </nav>
 
     <!-- Header -->
-    <header>
+    <header class="animated_bg">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
