--- a/index.html
+++ b/index.html
@@ -175,8 +175,8 @@
                 <div class="col-lg-4">
                     <p>Whether you're a student looking to showcase your work, a professional looking to attract clients, or a graphic artist looking to share your projects, this template is the perfect starting point!</p>
                 </div>
-                <div class="col-lg-8 col-lg-offset-2 text-center animated_bg2">
-                    <a href="#" class="btn btn-lg btn-outline">
+                <div class="col-lg-8 col-lg-offset-2 text-center">
+                    <a href="#" class="btn btn-lg btn-outline  animated_bg2">
                         <i class="fa fa-download "></i> Download Theme
                     </a>
                 </div>
