--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
     <meta name="author" content="">
+    <script src='https://www.google.com/recaptcha/api.js'></script>
 
-    <title>Freelancer - Start Bootstrap Theme</title>
+    <title>Cory Hanna Design</title>
 
     <!-- Bootstrap Core CSS - Uses Bootswatch Flatly Theme: http://bootswatch.com/flatly/ -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -233,6 +234,7 @@
                                 <button type="submit" class="btn btn-success btn-lg">Send</button>
                             </div>
                         </div>
+			    <div class="g-recaptcha" data-sitekey="6Ldn8wcUAAAAAHRawtqzTwjPT9EMelENiLh5GGDd"></div>
                     </form>
                 </div>
             </div>
