--- a/new-theme/index.html
+++ b/new-theme/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-
+<script src="https://embed.small.chat/T0JUU50AHG53K20KK2.js" async></script>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
